testsuite/tests/properties/invalid_lazy_field/inconsistent_base_1.lkt
import common

class FooNode implements Node[FooNode] {
    @export fun p(): Int = 1
}

class Example: FooNode {
    @export @lazy p: Int = 2
}
